# mt76

./: Makefile  agg-rx.c  channel.c  debug.c  debug.h  debugfs.c  dma.c  dma.h  eeprom.c  mac80211.c  mcu.c  mt76.h  mt76_connac3_mac.h  mt76_connac_mac.c  mt76_connac_mcu.c  mt76_connac_mcu.h  scan.c  testmode.c  testmode.h  trace.h  tx.c  wed.c
.github/workflows/: codeql.yml
mt7921/: init.c  main.c  main.c.rej  pci.c  pci.c.rej  sdio.c.rej  usb.c  usb.c.rej
mt7925/: usb.c
mt7996/: Makefile  coredump.c  debugfs.c  dma.c  eeprom.c  eeprom.h  init.c  mac.c  main.c  mcu.c  mcu.h  mmio.c  mt7996.h  mt7996_trace.h  mtk_debug.h  mtk_debug_i.h  mtk_debugfs.c  mtk_debugfs_i.c  mtk_mcu.c  mtk_mcu.h  pci.c  regs.h  testmode.c  testmode.h  trace.c  vendor.c  vendor.h
tools/: CMakeLists.txt  eeprom.c  fields.c  fwlog.c  main.c  mt76-test.h
